--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./css/main.css" rel="stylesheet"></link>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+    <header class="header">
+        <a href="/"><img src="./img/logo.svg" alt="A"></a>
+        <nav class="header__nav nav"> 
+            <ul class="nav-list">
+                <li class="nav-list__item">
+
+                    <a class="ui-link" href="#about">О нас</a>
+                </li>
+                <li class="nav-list__item">
+                    <a class="ui-link" href="#project">Проекты</a>
+                </li>
+                <li class="nav-list__item">
+                    <a class="ui-link"  href="#materials">Материалы</a>
+                </li>
+                <li class="nav-list__item">
+                    <a class="ui-link" href="#reviews">Отзывы</a>
+                </li>
+            </ul>
+            <a href="tel:79999999999">+7 999 999 99 99</a>
+        </nav>
+        
+    </header>
+    <main>
+        <section class="promo">
+            <div class="promo__controls">
+                <h1 class="promo__controls__text">Эксклюзивная и нестандартная мебель для дома</h1>
+                <button class="ui-button--secondary">ЗАКАЗАТЬ ПРОЕКТ</button>
+            </div>
+            <div class="promo__content">
+                <div class="promo__content-left">
+                    <h4 class="promo__content__text">Мы можем произвести любую мебель для вашего проекта и найти производственное решение любой задумки.</h4>
+                    <img src="img/furniture__left.jpg" alt="мебель">
+                </div>
+                <div class="promo__content-right">
+                    <img src="img/furniture__right.jpg" alt="мебель">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
+    </div>
 </body>
 </html>
