--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/main.css" rel="stylesheet"></link>
+    <link href="./css/main.css" rel="stylesheet"/>
     <title>Document</title>
 </head>
 <body>
@@ -38,16 +38,163 @@
             </div>
             <div class="promo__content">
                 <div class="promo__content-left">
-                    <h4 class="promo__content__text">Мы можем произвести любую мебель для вашего проекта и найти производственное решение любой задумки.</h4>
-                    <img src="img/furniture__left.jpg" alt="мебель">
+                    <h4 class="promo__content-title">Мы можем произвести любую мебель для вашего проекта и найти производственное решение любой задумки.</h4>
+                    <img src="img/furniture-left.jpg" alt="мебель">
                 </div>
                 <div class="promo__content-right">
-                    <img src="img/furniture__right.jpg" alt="мебель">
+                    <img src="img/furniture-right.jpg" alt="мебель">
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="about-left">
+                <h2 class="about-left__text">Более 5 лет создаем мебель для вашего комфорта</h2>
+            </div>
+            <div class="about-right">
+                    <p class="about-right__text">Мы — команда профессионалов, которые могут произвести любую мебель для вашего проекта, а также найти производственное решение любой задумки.</p>
+                    <p class="about-right__text">Наша основная цель — реализовывать самые смелые задумки, и делать это качественно и аккуратно.</p>
+                    <p class="about-right__text">В качестве материалов мы используем натуральные — стекло, дерево, бетон, камень, металл и эпоксидную смолу.</p>
+                <ul class="about-right__bottom">
+                    <li>
+                        <h3 >1 год</h3>
+                        <p class="about-right__bottom-text">гарантии на всю продукцию</p>
+                    </li>
+                    <li>
+                        <h3 >300+</h3>
+                        <p class="about-right__bottom-text">выполненных проектов</p>
+                    </li>
+                    <li>
+                        <h3 >15 дней</h3>
+                        <p class="about-right__bottom-text">срок производства</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="work-steps">
+            <div class="work-steps__left">
+                <h2 class="work-steps__left-title">Как мы работаем</h2>
+            </div>
+            <div class="work-steps__right">
+                <p class="work-steps__right-text">Алгоритм работы с нами для удобства и понимания проекта</p>
+                <ul class="work-steps__right-list">
+                    <li class="work-steps__right-list-item">
+                        <h3>Идея</h3>
+                        <p class="work-steps__right-list-item-text">Клиент приходит к нам с идеей. Это может быть изображение/ эскиз или другой референс. А мы думаем над тем, как это реализовать, делаем технические чертежи и предлагаем решения по материалам.</p>
+                    </li>
+                    <li class="work-steps__right-list-item">
+                        <h3 >Техническое задание</h3>
+                        <p class="work-steps__right-list-item-text">Вместе с клиентом формулируем корректное ТЗ, которое включает в себя визуализацию изделия, эскизный чертёж с габаритами, информацию по материалам и отделке, срок реализации проекта и другие обязательные пункты.</p>
+                    </li>
+                    <li class="work-steps__right-list-item">
+                        <h3 >Коммерческое предложение</h3>
+                        <p class="work-steps__right-list-item-text">Предпочтительно используем натуральные материалы. Но любую смету можем оптимизировать, упростив материалы или конструктив. Сможем подстроиться под бюджет клиента и согласуем коммерческое предложение</p>
+                    </li>
+                    <li class="work-steps__right-list-item">
+                        <h3 >Подготовка рабочего проекта</h3>
+                        <p class="work-steps__right-list-item-text">Создадим рабочую документацию и чертежи. Это фундамент качественного производства. На этом этапе утверждаем с клиентом все габариты и материалы, чертежи и приступаем к производству.</p>
+                    </li>
+                    <li class="work-steps__right-list-item">
+                        <h3 >Производство и монтаж</h3>
+                        <p class="work-steps__right-list-item-text">Производство занимает от 15 рабочих дней, в зависимости от сложности и объёма. Монтажом тоже занимаемся самостоятельно. Ведь мы это сделаем быстро и аккуратно.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="projects">
+            <h2 class="projects__title">Проекты</h2>
+            <ul class="projects__list">
+                <li class="projects__list-item">
+                    <img src="img/project-1.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Тумба под телевизор</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+                <li class="projects__list-item">
+                    <img src="img/project-2.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Кухня</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+                <li class="projects__list-item">
+                    <img src="img/project-3.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Тумба под телевизор</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+                <li class="projects__list-item">
+                    <img src="img/project-4.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Гостинная</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+                <li class="projects__list-item">
+                    <img src="img/project-5.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Шкаф</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+                <li class="projects__list-item">
+                    <img src="img/project-6.jpg" alt="project1">
+                    <a href="#" class="projects__list-item-link">
+                        <p class="projects__list-item-text">Тумба под телевизор</p>
+                        <img class="projects__list-item-icon" src="img/arrow.svg" alt="arrow"> 
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="reviews">
+            <h2 class="reviews__title">Отзывы</h2>
+            <ul class="reviews__list">
+                <li class="reviews__list-item">
+                    <img class="reviews__list-item-image" src="img/quotes.svg" alt="image">
+                    <h5 class="reviews__list-item-name">Игорь Антонов</h5>
+                    <p class="reviews__list-item-text">Обратилась к Aveji по рекомендации. Команда сразу поняла, какой дизайн я хочу. Предоставили несколько вариантов и в течение недели сделали наброски. Итог понравился, все на высшем уровне.</p>
+                </li>
+                <li class="reviews__list-item">
+                    <img class="reviews__list-item-image" src="img/quotes.svg" alt="image">
+                    <h5 class="reviews__list-item-name">Ольга Иванова</h5>
+                    <p class="reviews__list-item-text">После пары заказов у компании Aveji убедилась, что за мебелью теперь только к ним. Абсолютно любые решения, в любых размерах и форм-факторе, то что нужно!</p>
+                </li>
+                <li class="reviews__list-item">
+                    <img class="reviews__list-item-image" src="img/quotes.svg" alt="image">
+                    <h5 class="reviews__list-item-name">Аркадий Макаров</h5>
+                    <p class="reviews__list-item-text">Aveji — настоящие профессионалы своего дела. Быстро поняли мою задумку, сделали дизайн, согласовали и изготовили мебель. А потом еще и бесплатно все собрали на месте. Большое спасибо!</p>
+                </li>
+            </ul>
+        </section>
+        <section class="coopiration">
+            <img class="coopiration__img" src="img/bedrooms.jpg" alt="bedrooms">
+            <div class="coopiration__form">
+                <h2 class="coopiration__form-title">Хотите заказать проект?</h2>
+                <p class="coopiration__form-text">Оставьте заявку, и мы вам перезвоним</p>
+                <form action="#" class="form">
+                    <input class="coopiration__form-input" type="text" placeholder="Имя"/>
+                    <input class="coopiration__form-input" type="email" placeholder="E-mail"/>
+                    <input class="coopiration__form-input" type="tel" placeholder="Телефон"/>
+                    <button type="submit" class="ui-button coopiration__form-btn">Отправить заявку</button>
+                </form>
+                <div class="coopiration__form-apps">
+                    <a> <img src="./img/app_store.svg" alt="app_store"> </a>
+                    <a><img src="./img/google_play.svg" alt="google_play"></a>
                 </div>
             </div>
         </section>
     </main>
-    <footer></footer>
-    </div>
+    <footer class="footer">
+        <div class="footer__copyright">
+            <h4 class="footer__copyright-text">© 2023 Aveji </h4>
+            <h4 class="footer__copyright-text">Все права защищены</h4>
+        </div>
+        <p class="footer__confidence">Политика конфеденциальности / Оплата и доставка</p>
+        <div class="footer__services">
+            <a href="#" class="footer__services-link"> Вконтакте</a>
+            <a href="#" class="footer__services-link"> Телеграм</a>
+        </div>
+    </footer>
 </body>
 </html>
